2000-05-07  Valek Filippov  <frob@df.ru>

	* genreport-new.pl: updated by kmaraas and frob.

2000-04-22  Fatih Demir	<kabalak@gmx.net>
	
	* ./tr : Added a Turkish subdir .

2000-04-15  Karl EICHWALDER  <ke@suse.de>

	* de: New directory.

2000-04-03  Robert Brady  <rwb197@zepler.org>

	* en_GB/en_GB.pl: adds list of locales en_GB will work for. There
	are rather a lot of them (and I've only barely started research...)

	* genreport.pl: Add en_GB to list of languages stats are generated 
	for.

2000-04-02  Kjartan Maraas  <kmaraas@online.no>

	* genreport.pl: Added script to make statistics for
	the i18n work. Originally from Matt Wilson <msw@redhat.com>,
	improved by Dan Damian <dand@dnttm.ro>, Val Filippov <frob@df.ru>,
	and myself.
	
2000-04-02  Robert Brady  <rwb197@zepler.org>

	* en_GB/en_GB.pl: The script to translate to British.

2000-03-09  Kjartan Maraas  <kmaraas@online.no>

	* es/translate-gnome-es.sgml: Added Spanish translation
	of the translation doc.
	* es/update-es.sh: Added file.
	
2000-02-20  Richard Hult  <rhult@hem.passagen.se>

	* sv/ordlista.html: removed headers so that the file could be
	* <!--included

2000-02-20 Kjartan Maraas  <kmaraas@online.no>

	* translate-gnome.sgml: Added guide to translating gnome
	programs.
	
2000-02-20  Richard Hult  <rhult@hem.passagen.se>

	* Added sv directory with info for the Swedish translation team.

2000-02-20  Kjartan Maraas  <kmaraas@online.no>

	* Added this module to keep things specific to
	i18n work. For example dictionaries for different teams
	etc. Each team could use this as a base for storing
	stuff they want to share between themselves or with
	the other teams.