@@ -1,3 +1,12 @@
+2000-05-21  Kenneth "Quaniquus" Christiansen <kenneth@gnome.org>
+
+        * temporaly name change: Started to call myself 
+          Quaniquus on irc, since BitchX is stupid
+
+        * desk.pl: Added script to put in your root cvs dir.
+          Then run for instance ./desk.pl da and you will get
+          a list of all desktop files missing da! :) 
+
 2000-05-07  Valek Filippov  <frob@df.ru>
 
 	* genreport-new.pl: updated by kmaraas and frob.
